# nk-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRE_PUBLISH_AUDIT.md
examples/: portal-hosts.example.json  repository-units.example.json
src/nk_cli/: __init__.py  __main__.py  boundaries.py  cli.py  portal_doctor.py  reclaim.py
tests/: test_boundaries.py  test_portal_doctor.py  test_reclaim.py
